--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -102,7 +102,7 @@
     <Compile Include="Servisi\PushData.cs" />
     <Compile Include="Servisi\UserLogin.cs" />
     <Compile Include="Servisi\UserRegister.cs" />
-    <Compile Include="Servisi\UserAddBrojilo.cs" />
+    <Compile Include="Servisi\UserRegisterBrojilo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
