--- a/src/Cache Memory/Cache Memory.csproj
+++ b/src/Cache Memory/Cache Memory.csproj
@@ -76,10 +76,14 @@
   <ItemGroup>
     <Compile Include="Connection\ConnectionParameters.cs" />
     <Compile Include="Connection\ConnectionPool.cs" />
+    <Compile Include="DataAccessObject\Implementations\Korisnici.cs" />
+    <Compile Include="DataAccessObject\Interfaces\ICRUD.cs" />
+    <Compile Include="DataAccessObject\Interfaces\IKorisnici.cs" />
     <Compile Include="Models\Brojilo.cs" />
     <Compile Include="Models\EvidencijaPotrosnje.cs" />
     <Compile Include="Models\Korisnik.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ParameterUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -91,6 +95,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
