--- a/src/Cache Memory/Cache Memory.csproj
+++ b/src/Cache Memory/Cache Memory.csproj
@@ -76,11 +76,13 @@
   <ItemGroup>
     <Compile Include="Connection\ConnectionParameters.cs" />
     <Compile Include="Connection\ConnectionPool.cs" />
+    <Compile Include="DataAccessObject\Interfaces\IRegistracijaNaSistem.cs" />
+    <Compile Include="DataAccessObject\Interfaces\IPrijavaNaSistem.cs" />
     <Compile Include="DataAccessObject\Implementations\Korisnici.cs" />
     <Compile Include="DataAccessObject\Implementations\PrijavaNaSistem.cs" />
+    <Compile Include="DataAccessObject\Implementations\RegistracijaNaSistem.cs" />
     <Compile Include="DataAccessObject\Interfaces\ICRUD.cs" />
     <Compile Include="DataAccessObject\Interfaces\IKorisnici.cs" />
-    <Compile Include="DataAccessObject\Interfaces\IPrijavaNaSistem.cs" />
     <Compile Include="Models\Brojilo.cs" />
     <Compile Include="Models\EvidencijaPotrosnje.cs" />
     <Compile Include="Models\Korisnik.cs" />
@@ -97,7 +99,9 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Service\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
