--- a/src/Cache Memory/Cache Memory.csproj
+++ b/src/Cache Memory/Cache Memory.csproj
@@ -92,6 +92,11 @@
     <Compile Include="Models\EvidencijaPotrosnje.cs" />
     <Compile Include="Models\Korisnik.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\BelezenjeEvidencijaPotrosnjeService.cs" />
+    <Compile Include="Service\BrojilaService.cs" />
+    <Compile Include="Service\KorisniciService.cs" />
+    <Compile Include="Service\PrijavaNaSistemService.cs" />
+    <Compile Include="Service\RegistracijaNaSistemServis.cs" />
     <Compile Include="Utils\ParameterUtil.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -104,9 +109,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Service\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
