--- a/src/Historical/Historical.csproj
+++ b/src/Historical/Historical.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Implementations\Historical.cs" />
     <Compile Include="Interfaces\IHistorical.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ParameterUtils.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
